--- a/css/main_style.css
+++ b/css/main_style.css
@@ -20,7 +20,9 @@ body
 
 #main
 {
-  height:500px;
+  height:500px; 
+  padding-left:10px;
+  padding-right:10px;
 }
 
 #footer
@@ -58,4 +60,26 @@ body
   
   position:fixed;
   z-index:1;
+}
+
+#banner
+{
+  text-align:center;
+}
+
+#tail
+{
+  text-align:center;
+}
+
+.menu_button
+{
+  padding-left:20px;
+  padding-right:20px;
+}
+
+#menu_bar
+{
+  margin-left:auto;
+  margin-right:auto;
 }
